[package]
name = "integrity"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/integrity"
repository = "https://github.com/xJonathanLEI/integrity-rs"
homepage = "https://github.com/xJonathanLEI/integrity-rs"
description = "Rust library for verifying STARK proofs from `swiftness` on `integrity`"
keywords = ["starknet", "stark"]
exclude = [".github/**"]

[dependencies]
