[package]
name = "integrity"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/integrity"
repository = "https://github.com/xJonathanLEI/integrity-rs"
homepage = "https://github.com/xJonathanLEI/integrity-rs"
description = "Rust library for verifying STARK proofs from `swiftness` on `integrity`"
keywords = ["starknet", "stark"]
exclude = [".github/**"]

[dependencies]
starknet-core = { version = "0.12.1", default-features = false }
starknet-crypto = { version = "0.7.4", default-features = false }
swiftness = { version = "1.0.0", default-features = false }
swiftness_air = { version = "1.0.0", default-features = false }
swiftness_commitment = { version = "1.0.0", default-features = false }
swiftness_fri = { version = "1.0.0", default-features = false }
swiftness_pow = { version = "1.0.0", default-features = false }
swiftness_stark = { version = "1.0.0", default-features = false }
swiftness_transcript = { version = "1.0.0", default-features = false }

[dev-dependencies]
starknet-macros = { version = "0.2.1", default-features = false, features = ["use_imported_type"] }

[features]
default = ["recursive", "keccak_160_lsb", "stone5"]

# Layout features
dex = ["swiftness/dex"]
recursive = ["swiftness/recursive"]
recursive_with_poseidon = ["swiftness/recursive_with_poseidon"]
small = ["swiftness/small"]
starknet = ["swiftness/starknet"]
starknet_with_keccak = ["swiftness/starknet_with_keccak"]
dynamic = ["swiftness/dynamic"]

# Hasher features
keccak_160_lsb = ["swiftness/keccak_160_lsb"]
keccak_248_lsb = ["swiftness/keccak_248_lsb"]
blake2s_160_lsb = ["swiftness/blake2s_160_lsb"]
blake2s_248_lsb = ["swiftness/blake2s_248_lsb"]

# Stone version features
stone5 = ["swiftness/stone5"]
stone6 = ["swiftness/stone6"]
